Поправил описание свагера и nginx.conf для фильтрации запросов
