# app/Swagger/Controllers/FlightController.php
@@ -8,8 +8,77 @@ namespace App\Swagger\Controllers;
  *      summary="Получение всех рейсов",
  *      tags={"Flights"},
  *
- *      @OA\RequestBody(
- *          @OA\JsonContent(ref="#/components/schemas/IndexFlightRequest")
+ *      @OA\Parameter(
+ *          name="flight_no",
+ *          description="Номер рейса",
+ *          in="query",
+ *          example="PG0405",
+ *          @OA\Schema(type="string"),
+ *          required=false,
+ *      ),
+ *      @OA\Parameter(
+ *           name="scheduled_departure",
+ *           description="Дата отправления",
+ *           in="query",
+ *           example="2016-09-13 05:35:00",
+ *           @OA\Schema(type="datetime"),
+ *           required=false,
+ *       ),
+ *      @OA\Parameter(
+ *          name="scheduled_arrival",
+ *          description="Дата прибытия",
+ *          in="query",
+ *          example="2016-09-14 06:30:00",
+ *          @OA\Schema(type="datetime"),
+ *          required=false,
+ *      ),
+ *      @OA\Parameter(
+ *          name="departure_airport",
+ *          description="Код аэропорта отправления",
+ *          in="query",
+ *          example="DME",
+ *          @OA\Schema(type="string"),
+ *          required=false,
+ *      ),
+ *      @OA\Parameter(
+ *          name="arrival_airport",
+ *          description="Код аэропорта прибытия",
+ *          in="query",
+ *          example="HMA",
+ *          @OA\Schema(type="string"),
+ *          required=false,
+ *      ),
+ *      @OA\Parameter(
+ *          name="status",
+ *          description="Статус рейса",
+ *          in="query",
+ *          example="On Time",
+ *          @OA\Schema(type="string", enum={"Arrived", "Scheduled", "On Time", "Departed", "Delayed", "Cancelled"}),
+ *          required=false,
+ *      ),
+ *      @OA\Parameter(
+ *          name="aircraft_code",
+ *          description="Код самолета, IATA",
+ *          in="query",
+ *          example=321,
+ *          @OA\Schema(type="integer"),
+ *          required=false,
+ *      ),
+ *      @OA\Parameter(
+ *          name="actual_departure",
+ *          description="Фактическое время отправления",
+ *          in="query",
+ *          example="2016-09-13 05:36:00",
+ *          @OA\Schema(type="datetime"),
+ *          required=false,
+ *      ),
+ *      @OA\Parameter(
+ *          name="actual_arrival",
+ *          description="Фактическое время прибытия",
+ *          in="query",
+ *          example="2016-09-14 06:38:00",
+ *          @OA\Schema(type="datetime"),
+ *          required=false,
  *      ),
  *
  *      @OA\Response(
